# wordle-friends

./: .gitignore  ERD.drawio  README.md  docker-compose.yml
API/: Dockerfile  app.py  entrypoint.sh  prepare.py  requirements.txt
Backend/: CMakeLists.txt  Dockerfile  README.md  main.cpp  words.json
Backend/API/: AdminAPI.cpp  AdminAPI.h  PlayerAPI.cpp  PlayerAPI.h  UserAPI.cpp  UserAPI.h
Backend/Controller/: AdminController.cpp  AdminController.h  AuthenticationController.cpp  AuthenticationController.h  BaseController.h  ChatController.cpp  ChatController.h  GameController.cpp  GameController.h  PlayerController.cpp  PlayerController.h  ResponseController.cpp  ResponseController.h  RoomController.cpp  RoomController.h  ServerController.cpp  ServerController.h  SocketController.cpp  SocketController.h  TokenController.cpp  TokenController.h  UserController.cpp  UserController.h
Backend/Database/: constants.h  ddl.cpp  dml.cpp  dml.h  dql.cpp  dql.h
Backend/Model/: Admin.cpp  Admin.h  Message.cpp  Message.h  Player.cpp  Player.h  Response.cpp  Response.h  Room.cpp  Room.h  RoomContainer.cpp  RoomContainer.h  User.cpp  User.h
Backend/Session/: ChatSession.cpp  ChatSession.h  DuoGameSession.cpp  DuoGameSession.h  GameSession.cpp  GameSession.h  NotificationSession.cpp  NotificationSession.h  Session.cpp  Session.h  SingleGameSession.cpp  SingleGameSession.h
Backend/WebView/: AdminWebView.cpp  AdminWebView.h  ChatWebView.cpp  ChatWebView.h  GameWebView.cpp  GameWebView.h  PlayerWebView.cpp  PlayerWebView.h  RoomWebView.cpp  RoomWebView.h  TokenWebView.cpp  TokenWebView.h  UserWebView.cpp  UserWebView.h
Design/: Class Diagram.drawio  ERD.drawio  Relational Model.drawio
WordleAPI/: words.csv
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  LoginPage.jsx  Profile.jsx  index.css  index.js
frontend/src/Components/: Chat.jsx  FilteredList.jsx  Friends.jsx  InputField.jsx  LoginForm.jsx  Message.jsx  RegistrationForm.jsx
frontend/src/Components/Chat/: Card.jsx  Chat.jsx  FriendsList.jsx  Message.jsx  MessageList.jsx
frontend/src/Components/Dashboard/: Card.jsx  CustomChart.jsx
frontend/src/Components/Form/: InputField.jsx  LoginForm.jsx  PasswordUpdate.jsx  RegistrationForm.jsx  UpdateForm.jsx
frontend/src/Components/Game/: GameBoard.jsx  JoinBar.jsx  Keyboard.jsx  OpponentCard.jsx  Row.jsx
frontend/src/Components/Home/: InformationCard.jsx  NotificationIcon.jsx  SideBarIcon.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/Components/Profile/: Field.jsx  FriendsList.jsx  GameChart.jsx  PersonalInfo.jsx
frontend/src/Components/Registeration/: InputField.jsx  LoginForm.jsx  RegistrationForm.jsx
frontend/src/Components/Search/: Card.jsx  FilteredList.jsx  Searchbar.jsx
frontend/src/Components/Styles/: form.module.css  form.module.css.map  form.module.scss  input.module.css
frontend/src/Page/: ChatPage.jsx  DuoGamePage.jsx  GamePage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  SearchPage.jsx  SingleGamePage.jsx
frontend/src/Pages/: ChatPage.jsx  Dashboard.jsx  DuoGamePage.jsx  GamePage.jsx  HomePage.jsx  JoinRoom.jsx  ProfilePage.jsx  SearchPage.jsx
frontend/src/State/: authSlice.js  chatSlice.js  gameSlice.js  pageSlice.js  searchSlice.js  store.js
frontend/src/Util/: array.js  date.js  encryption.js  mappingDate.js  random.js  string.js  urls.js
(+77 files in other folders)
